# prophetic-strategies

./: .gitignore  LICENSE  README.md  pyproject.toml  strategies.py  streamlit_app.py
.devcontainer/: devcontainer.json
db/: mill_liberty.feather  oblique.db  word2vec.model
src/prophetic-strategies/: Prophet.py  constants.py  costs.py  cross_encoding.py  genai.py  minilm.ipynb  minilm.py  plot_embeddings.py  semantic_search.py  streamlit_app.py  utils.py  w2v.ipynb  w2v.py
src/prophetic-strategies/classes/: AnthropicModel.py  LocalModel.py  Model.py  OpenAIModel.py
src/prophetic-strategies/utils/: semantic_search.py  str.ipynb  utils.py
src/utils/: convert_db_sql_to_df.ipynb  str.ipynb
utils/: utils.py
