[tool.poetry]
name = "prophetic-strategies"
version = "0.1.0"
description = ""
authors = ["Gustavo Araujo Costa <gustavo@arcos.org.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
numpy = "^2.0.1"
streamlit = "^1.37.0"
openai = "^1.37.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
