[tool.poetry]
name = "prophetic-strategies"
version = "0.1.0"
description = ""
authors = ["Gustavo Araujo Costa <gustavo@arcos.org.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
streamlit = "^1.37.0"
openai = "^1.37.1"
gensim = "^4.3.3"
scikit-learn = "^1.5.1"
matplotlib = "^3.9.2"
sentence-transformers = "^3.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
