[tool.poetry]
name = "prophetic-strategies"
version = "0.1.0"
description = ""
authors = ["Gustavo Araujo Costa <gustavo@arcos.org.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
streamlit = "^1.37.0"
openai = "^1.37.1"
tiktoken = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
